# KeySound

./: .gitignore  README.md  build.ps1  build.py  build.sh  keysound_app.py  keysound_audio.py  keysound_sounds.py  keysound_stats.py  main.py  pyproject.toml
